--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,37 +14,17 @@ jobs:
       # Step 1: Checkout the source code from the repository
       - name: Checkout code
         uses: actions/checkout@v4
-
-      # Step 2: Set up the Java environment
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
+      # Step 6: Copy docker-compose.yml
+      - name: Deploy file to VM
+        uses: appleboy/scp-action@v0.1.7
         with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: 'maven'
-
-      # Step 3: Build the Spring Boot application with Maven
-      - name: Build with Maven
-        run: mvn -B clean package -DskipTests
-
-      # Step 4: Login to Docker Hub
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # Step 5: Build and push the Docker image to Docker Hub
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/arm64
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/izzaz_pf_profile:latest
-          file: ./Dockerfile
-      # Step 6: Deploy to Oracle VM via SSH
-      - name: Deploy to Oracle VM
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "docker-compose.yml"
+          target: "/home/${{ secrets.SSH_USERNAME }}/pf_microservice"
+      # Step 7: Deploy to Oracle VM via SSH
+      - name: Add docker username to env
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -52,8 +32,3 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             export DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
-            cd /home/${{ secrets.SSH_USERNAME }}/pf_microservice/
-            #pull docker
-            docker compose pull
-            # Start the container from the new image
-            docker compose up -d
