--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,7 +14,7 @@ jobs:
       # Step 1: Checkout the source code from the repository
       - name: Checkout code
         uses: actions/checkout@v4
-      # Step 6: Copy docker-compose.yml
+      # Step 2: Copy docker-compose.yml
       - name: Deploy file to VM
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -22,6 +22,15 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "docker-compose.yml"
+          target: "/home/${{ secrets.SSH_USERNAME }}/pf_microservice"
+      # Step 6: Copy kong.yml
+      - name: Deploy file to VM
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "kong.yml"
           target: "/home/${{ secrets.SSH_USERNAME }}/pf_microservice"
       # Step 7: Deploy to Oracle VM via SSH
       - name: Add docker username to env
